src/components/generic/progress.css
.progress {
  align-items: center;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  width: 100%;
}

.progress__meter {
  flex-grow: 1;
  /* HACK */
  max-height: calc(100vh - 8rem);
  transform: rotate(270deg);
}

.progress__circle {
  fill: transparent;
  stroke: var(--white);
  stroke-width: 0.1;
}
.progress__circle--transitioning {
  transition: stroke-dashoffset 1s linear;
}

.progress__circle-background {
  fill: transparent;
  stroke: rgba(255, 255, 255, 0.15);
  stroke-width: 0.1;
}

.progress__time {
  font-size: var(--font-size-x-large);
}

